tests/baselines/reference/moduleExportWithExportPropertyAssignment.errors.txt
tests/cases/conformance/salsa/a.js(4,6): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/conformance/salsa/a.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1()
    mod1.f() // error, not enough arguments
         ~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 /.src/tests/cases/conformance/salsa/mod1.js:4:30: An argument for 'a' was not provided.
    
==== tests/cases/conformance/salsa/requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== tests/cases/conformance/salsa/mod1.js (0 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports = function () { }
    /** @param {number} a */
    module.exports.f = function (a) { }
    